--- a/soccer-streams-7.html
+++ b/soccer-streams-7.html
@@ -12,18 +12,18 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link href="/css/buttons.css" rel="stylesheet">
     <link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
-    
-    <!-- CRITICAL: Load in this exact order -->
-    <script src="https://cdn.jsdelivr.net/npm/clappr@latest/dist/clappr.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@clappr/playback-levels@latest/dist/playback-levels.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/clappr-level-selector-plugin@0.3.0/dist/level-selector.min.js"></script>
-    
+
+    <!-- Use the same working Clappr + level-selector stack as your test -->
+    <script src="https://cdn.jsdelivr.net/npm/@clappr/player@0.4.0/dist/clappr.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mux.js@5.6.7/dist/mux.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/level-selector@latest/dist/level-selector.min.js"></script>
+
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-EQ3BHVQGMN"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'G-EQ3BHVQGMN');
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-EQ3BHVQGMN');
     </script>
     <style>
         .navbar-brand {
@@ -34,13 +34,8 @@
             font-family: 'Kanit', sans-serif;
             font-weight: bold;
         }
-        .navbar-brand:hover {
-            text-decoration: underline;
-        }
-        .navbar-nav .nav-link {
-            padding-left: 5px;
-            padding-right: 5px;
-        }
+        .navbar-brand:hover { text-decoration: underline; }
+        .navbar-nav .nav-link { padding-left: 5px; padding-right: 5px; }
         .fullplayer {
             display: flex;
             justify-content: center;
@@ -100,8 +95,8 @@
         <div class="fullplayer">
             <div id="playerContainer"></div>
             <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://daffodil.shadow-ran.online/arsenal.m3u8')">Stream 1</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://streams.bitmovin.com/d59p9366okvm4g5agge0/manifest.m3u8')">Stream 2 (Multi Quality)</button>
+                <button class="streambutton" onclick="showPlayer('https://daffodil.shadow-ran.online/arsenal.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('https://streams.bitmovin.com/d59p9366okvm4g5agge0/manifest.m3u8')">Stream 2 (Multi Quality)</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
@@ -119,27 +114,27 @@
     <script>
         var clapprPlayer;
 
-        function showPlayer(playerType, stream) {
-            if (playerType === "clappr") {
-                if (clapprPlayer) {
-                    clapprPlayer.destroy();
-                }
-
-                clapprPlayer = new Clappr.Player({
-                    source: stream,
-                    parentId: "#playerContainer",
-                    height: '100%',
-                    width: '100%',
-                    autoPlay: true,
-                    // String names ONLY - matches your working extension
-                    playback: { levels: true }, 
-                    plugins: ['playback-levels', 'level-selector']
-                });
+        function showPlayer(stream) {
+            if (clapprPlayer) {
+                clapprPlayer.destroy();
             }
+
+            var isMultiQuality = stream.indexOf('bitmovin.com') !== -1;
+
+            clapprPlayer = new Clappr.Player({
+                source: stream,
+                parentId: "#playerContainer",
+                height: '100%',
+                width: '100%',
+                autoPlay: true,
+                // LevelSelector only for the multi-quality stream
+                plugins: isMultiQuality ? [LevelSelector] : []
+            });
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://daffodil.shadow-ran.online/arsenal.m3u8');
+            // Autostart Stream 1 like before
+            showPlayer('https://daffodil.shadow-ran.online/arsenal.m3u8');
         };
     </script>
     <script src="js/bootstrap.bundle.min.js"></script>
