--- a/nba.html
+++ b/nba.html
@@ -198,6 +198,152 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for December 31, 2025
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Golden State Warriors vs Charlotte Hornets
+        </a>
+       </td>
+       <td>
+        December 31, 2025 10:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 01, 2026 10:00 AM:00" data-start="December 31, 2025 10:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Minnesota Timberwolves vs Atlanta Hawks
+        </a>
+       </td>
+       <td>
+        December 31, 2025 12:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 01, 2026 12:00 PM:00" data-start="December 31, 2025 12:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Orlando Magic vs Indiana Pacers
+        </a>
+       </td>
+       <td>
+        December 31, 2025 12:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 01, 2026 12:00 PM:00" data-start="December 31, 2025 12:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Phoenix Suns vs Cleveland Cavaliers
+        </a>
+       </td>
+       <td>
+        December 31, 2025 12:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 01, 2026 12:30 PM:00" data-start="December 31, 2025 12:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         New Orleans Pelicans vs Chicago Bulls
+        </a>
+       </td>
+       <td>
+        December 31, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 01, 2026 4:00 PM:00" data-start="December 31, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         New York Knicks vs San Antonio Spurs
+        </a>
+       </td>
+       <td>
+        December 31, 2025 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 01, 2026 4:00 PM:00" data-start="December 31, 2025 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Denver Nuggets vs Toronto Raptors
+        </a>
+       </td>
+       <td>
+        December 31, 2025 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 01, 2026 4:30 PM:00" data-start="December 31, 2025 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         Washington Wizards vs Milwaukee Bucks
+        </a>
+       </td>
+       <td>
+        December 31, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 01, 2026 5:00 PM:00" data-start="December 31, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-9">
+         Portland Trail Blazers vs Oklahoma City Thunder
+        </a>
+       </td>
+       <td>
+        December 31, 2025 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 01, 2026 5:00 PM:00" data-start="December 31, 2025 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
