--- a/nfl.html
+++ b/nfl.html
@@ -96,19 +96,27 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/ncaa-streams-1">Coastal Carolina vs. Louisiana Tech</a>
-<td>December 30, 2025 11:30 AM</td>
-<td><span class="countdown-timer" data-end="December 31, 2025 10:30:00" data-start="December 30, 2025 11:30:00"></span></td>
+<td><a href="https://roxiestreams.live/ncaa-streams-1">Iowa vs. Vanderbilt</a>
+<td>December 31, 2025 09:00 AM</td>
+<td><span class="countdown-timer" data-end="January 01, 2026 08:00:00" data-start="December 31, 2025 09:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/ncaa-streams-2">Tennessee vs. Illinois</a>
-<td>December 30, 2025 14:30 PM</td>
-<td><span class="countdown-timer" data-end="December 31, 2025 13:30:00" data-start="December 30, 2025 14:30:00"></span></td>
+<td><a href="https://roxiestreams.live/ncaa-streams-2">Arizona State vs. Duke</a>
+<td>December 31, 2025 11:00 AM</td>
+<td><span class="countdown-timer" data-end="January 01, 2026 10:00:00" data-start="December 31, 2025 11:00:00"></span></td>
 <tr>
-<td><a href="https://roxiestreams.live/ncaa-streams-3">USC vs. TCU</a>
-<td>December 30, 2025 18:30 PM</td>
-<td><span class="countdown-timer" data-end="December 31, 2025 17:30:00" data-start="December 30, 2025 18:30:00"></span></td>
+<td><a href="https://roxiestreams.live/ncaa-streams-3">Michigan vs Texas</a>
+<td>December 31, 2025 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 01, 2026 11:00:00" data-start="December 31, 2025 12:00:00"></span></td>
 <tr>
-</tr></td></tr></td></tr></td></tr></tbody></table></div>
+<td><a href="https://roxiestreams.live/ncaa-streams-1">Nebraska vs. Utah</a>
+<td>December 31, 2025 12:30 PM</td>
+<td><span class="countdown-timer" data-end="January 01, 2026 11:30:00" data-start="December 31, 2025 12:30:00"></span></td>
+<tr>
+<td><a href="https://roxiestreams.live/ncaa-streams-1">Miami (FL) vs Ohio State</a>
+<td>December 31, 2025 16:30 PM</td>
+<td><span class="countdown-timer" data-end="January 01, 2026 15:30:00" data-start="December 31, 2025 16:30:00"></span></td>
+<tr>
+</tr></td></tr></td></tr></td></tr></td></tr></td></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
 <li class="nav-item"><a class="nav-link px-2 text-body-secondary" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
