--- a/soccer-streams-1.html
+++ b/soccer-streams-1.html
@@ -136,7 +136,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://601.shadow-ran.online/usa.m3u8');
+            showPlayer('clappr', 'https://601.shadow-ran.online/tnt.m3u8');
         };
     </script>
     <script>
