--- a/fighting.html
+++ b/fighting.html
@@ -98,9 +98,19 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/wwe-streams">WWE RAW</a></td>
-<td>January 05, 2026 17:00 PM</td>
-<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 05, 2026 17:00:00"></span></td>
+<td><a href="https://roxiestreams.live/wwe-streams">WWE NXT</a></td>
+<td>January 06, 2026 17:00 PM</td>
+<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 06, 2026 17:00:00"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/aew">AEW</a></td>
+<td>January 07, 2026 17:00 PM</td>
+<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 07, 2026 17:00:00"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/wwe-streams">WWE Smackdown</a></td>
+<td>January 09, 2026 17:00 PM</td>
+<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 09, 2026 17:00:00"></span></td>
 </tr>
 <tr>
 </tbody>
