--- a/wwe-streams.html
+++ b/wwe-streams.html
@@ -137,7 +137,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://daffodil.shadow-ran.online/ww.m3u8');
+            showPlayer('clappr', 'https://daffodil.shadow-ran.online/wwe.m3u8');
         };
     </script>
     <script>
