--- a/nhl.html
+++ b/nhl.html
@@ -119,6 +119,7 @@
             <td><a href="https://roxiestreams.live/nhl-streams-5">Anaheim Ducks vs Los Angeles Kings</a></td>
             <td>January 16, 2026 07:30 PM</td>
             <td><span class="countdown-timer" data-end="2026-01-17 19:30:00" data-start="2026-01-16 19:30:00"></span></td>
+            <td><span class="countdown-timer" data-end="2026-01-18 10:00:00" data-start="2026-01-17 10:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
