--- a/soccer-streams-3.html
+++ b/soccer-streams-3.html
@@ -137,7 +137,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://daffodil.shadow-ran.online/golazo.m3u8');
+            showPlayer('clappr', 'https://daffodil.shadow-ran.online/main.m3u8');
         };
     </script>
     <script>
